index.css
*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: rgb(255, 255, 255);;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

body,
button,
input {
  font-family: "Roboto", sans-serif;
}

button {
  cursor: pointer;
}


header {
  background-color: black;
  padding: 2em 0;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid rgb(233, 233, 233);
}

.width-setter-div {
  flex: 1;
  max-width: 1020px;
}

h1 {
  font-family: "Sixtyfour Convergence", sans-serif;
  font-size: 1.3rem;
}

main {
  background-color: rgb(255, 255, 255);
  flex-grow: 1;
  width: 100%;
  max-width: 425px;
  margin: 0 auto;
}

.canvas-wrapper {
  width: 200px;
  height: 200px;
  margin: 3em auto 1.5em;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.chart-place-holder {
  width: 175px;
  height: 175px;
  background-color: rgb(45, 111, 197);
  position: absolute;
  top: 0;
  border-radius: 50%;
  color: whitesmoke;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
}

.export-btn {
  position: absolute;
  top: 0;
  left: -20px;
  background-color: transparent;
  border: none;
}

.add-expense-container,
.filter,
.total-spent,
.all-expenses,
.dark-mode-wrapper {
  padding: 1em;
  display: flex;
  flex-direction: column;
}

.dark-mode-wrapper {
  flex-direction: row;
  gap: 1em;
}

.all-expenses {
  gap: 1.5em;
}

.expense {
  gap: 0.5em;
}

.add-expense-container,
.filter,
.total-spen {
  align-items: center;
}

.expense {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

form,
.filter {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
}

form>input,
form>select,
form>button,
.filter>select,
.expense-details,
.total-spent>p,
.dark-mode-btn,
.settings-btn,
.cap-setter,
#cap,
.success-module,
.cap-btns>button,
#cap, .cap-warning-btn > button {
  border-radius: 0.5em;
  border: 1px solid rgb(211, 211, 211);
  padding: 0.7em 0.5em;
}

.dark-mode-btn,
.settings-btn {
  background-color: white;
}

.dark-mode-btn {
  width: 70px;
}

.settings-btn {
  width: 100px;
}

form>input,
form>select,
form>button,
.total-spent>p,
.filter>select,
.expense-details {
  width: 100%;
}

.dark-mode-wrapper {
  width: 100%;
}

form>button {
  background-color: rgb(45, 111, 197);
  color: whitesmoke;
  font-weight: 500;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  letter-spacing: 0.05em;
  transition: 0.2s;
}

form>button:active {
  background-color: rgb(58, 197, 45);
}

.total-spent>p {
  font-weight: 600;
  font-size: 0.95rem;
  font-family: "Roboto Mono", monospace;
}

.expense-details {
  display: flex;
  gap: 0.2em;
  align-items: center;
  justify-content: space-between;
}

.details-line-one {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.3em;
  text-transform: capitalize;
}

.details-line-one>.item-amount {
  font-weight: 700;
}

.expense>p,
.all-expenses>p {
  font-weight: 700;
}

.all-expenses>p {
  font-size: 1.3rem;
}

.delete-expense-btn {
  border-radius: 0.3em;
  border: none;
  background-color: red;
  color: whitesmoke;
  padding: 0.3em 0.4em;
  font-weight: 500;
}

.cap-setter,
.success-module,
.over-billion-module,
.cap-warning {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 100;
}

.cap-setter {
  background-color: rgb(241, 241, 241);
  min-width: 290px;
  display: flex;
  flex-direction: column;
  gap: 0.5em;
}

.cap-btns {
  display: flex;
  gap: 0.5em;
}

.cap-btns>button {
  border-radius: 0.3em;
  border: none;
  color: whitesmoke;
  flex: 1;
  font-weight: 500;
}

.set-btn {
  background-color: rgb(45, 111, 197);
}

.remove-cap-btn {
  background-color: rgb(180, 48, 48);
}

.cancel-btn {
  background-color: #6c757d;
}

#cap {
  flex: 1;
}


.success-module {
  padding: 1em;
  background-color: #28a746;
  color: whitesmoke;
  letter-spacing: 0.08em;
  
}

.over-billion-module {
  background-color: #a66cff;
  color: rgb(255, 255, 255);
  width: 80%;
  padding: 1em;
  border-radius: 0.5em;
  text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
}

.cap-warning {
  background-color: #ffe5b4;
  padding: 1em;
  min-width: 290px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
  border-radius: 0.5em;
  color: black;
  font-weight: 500;
  text-align: center;
}

.cap-warning-btn > button {
  padding: 0.5em 1em;
  color: white;
}

.warning-yes-btn {
  background-color: #d9534f;
}

.warning-no-btn {
  background-color: #6c757d;
}

/* Dark Theme */

.dark-theme {
  background-color: #0d0d28;
  color: whitesmoke;
}

.dark-theme-chart {
  background-color: #000872;
  color: whitesmoke;
  color-scheme: dark;
}

.dark-theme-chart::placeholder {
  color: whitesmoke;
}

.dark-icon {
  color: whitesmoke;
}

/* Utility */

.hidden {
  display: none;
}

.shade {
  background-color: black;
  height: 100vh;
  opacity: 0.4;
  position: fixed;
  width: 100%;
  z-index: 99;
  top: 0;
}

@media (min-width: 500px) {
  .canvas-wrapper {
    width: 250px;
    height: 250px;
  }
  
  .chart-place-holder {
    width: 215px;
    height: 215px;
  }
}

@media (min-width: 900px) {

  .width-setter-div {
    padding: 0 2em;
    flex: 1;
    max-width: 1020px;
  }

  main {
    width: 100%;
    max-width: 1020px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 7fr 8fr;
    gap: 0.3em;
    grid-template-rows: auto 1fr;
    border-left: 1px solid rgb(233, 233, 233);
    border-right: 1px solid rgb(233, 233, 233);
  }

  
  .canvas-wrapper {
    grid-column: 1;
    grid-row: 1;
  }

  .all-expenses {
    grid-column: 1;
    grid-row: 2;
    max-width: 425px;
    width: 100%;
    margin: 0 auto;
  }

  .content-settigns-content {
    padding-top: 2em;
    grid-column: 2;
    grid-row: 1 / 3;
    width: 100%;
    max-width: 500px;
    margin: 0 auto;
  }
}

